@@ -1,3 +1,9 @@
+Wed May 16 07:07:44 UTC 2012  Marcel Smit  <msmit@remedy.nl>
+
+        * tools/Config_Handlers/XML_File_Intf.h:
+        * tools/Config_Handlers/XML_File_Intf.cpp:
+          Fixed fuzz error.
+
 Tue May 15 13:43:53 UTC 2012  Marcel Smit  <msmit@remedy.nl>
 
         * MPC/config/dance_config_handlers.mpb:
